# haskell-openstack-req

./: LICENSE  openstack-req.cabal
src/: Compute.hs  Identity.hs
