cabal-version:       2.4
name:                openstack-req
version:             0.0.1.0
license:             Zlib
license-file:        LICENSE
author:              Pedro Henrique Lara Campos
maintainer:          root@pedrohlc.com

library
  exposed-modules:     Compute, Identity
  build-depends:       base ^>=4.12.0.0
                       , aeson ^>=1.4.2.0
                       , bytestring ^>= 0.10.8.2
                       , data-default-class ^>=0.1.2.0
                       , req ^>=1.2.1
                       , text ^>=1.2.3.1
                       , time ^>= 1.8.0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
